--- a/image-puzzle.css
+++ b/image-puzzle.css
@@ -1,4 +1,4 @@
-﻿#collage hr{
+#collage hr{
     border:none;
     border-top:2px solid #f5f2f2;
     height:1px;
@@ -62,15 +62,17 @@
     }
 
 #collage button  {
-    background-color:#f5f2f2;
-    border:1px solid #cce;
+    background-color: #005073;
+    border: 1px solid #FFF;
     display: inline;
-    font-size: 14px;
+    font-size: 16px;
     height: auto;
     width: auto;
-    padding: 3px 8px;
     margin-top: 14px;
+    color: #FFF;
+    padding: 8px;
 }
+
 #msgcenter{
     background-color: #4A934A;
     color: #FFF;
